--- a/src/LagoVista.ISY994i.Sample.UWP/App.xaml
+++ b/src/LagoVista.ISY994i.Sample.UWP/App.xaml
@@ -10,7 +10,7 @@
                 <!--<ResourceDictionary Source="/Resources/Colors.xaml" />
                 <ResourceDictionary Source="/Resources/Styles.xaml" /> -->
                 <ResourceDictionary Source="/Resources/Common.xaml" />
-                <!--<ResourceDictionary Source="/Resources/ViewModels.xaml" />-->
+                <ResourceDictionary Source="/Resources/ViewModels.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
