--- a/src/LagoVista.ISY994i.Sample.UWP/Resources/ViewModels.xaml
+++ b/src/LagoVista.ISY994i.Sample.UWP/Resources/ViewModels.xaml
@@ -2,6 +2,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:vms="using:LagoVista.ISY994i.Core.ViewModels">
-    <!--<vms:FoldersViewModel x:Key="FoldersViewModel" />
-    <vms:FolderViewModel x:Key="FolderViewModel" />-->
+    <vms:FoldersViewModel x:Key="FoldersViewModel" />
+    <vms:FolderViewModel x:Key="FolderViewModel" />
 </ResourceDictionary>
